Crash when rendering Instance Collection with hair in Eevee #72504

Closed
opened 2019-12-17 10:54:02 +01:00 by Blake · 5 comments

System Information
Operating system: Linux-5.4.3-arch1-1-x86_64-with-arch 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.82 (sub 5), branch: master, commit date: 2019-12-16 23:15, hash: 1ef6be3686
Worked: (optional)

Short description of error
Crash when rendering Instance Collection with hair in Eevee

Exact steps for others to reproduce the error
Make cube
Apply Hair
Make Instance to Scene
Render Eevee
Crash
hair_instance_crash.blend

**System Information** Operating system: Linux-5.4.3-arch1-1-x86_64-with-arch 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.82 (sub 5), branch: master, commit date: 2019-12-16 23:15, hash: `1ef6be3686` Worked: (optional) **Short description of error** Crash when rendering Instance Collection with hair in Eevee **Exact steps for others to reproduce the error** Make cube Apply Hair Make Instance to Scene Render Eevee Crash [hair_instance_crash.blend](https://archive.blender.org/developer/F8228653/hair_instance_crash.blend)
Author

Added subscriber: @dearzhen

Added subscriber: @dearzhen

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm.
One of the drawdata is memory garbage.

log:

>	blender.exe!DRW_drawdata_free(ID * id) Line 1001	C

 	blender.exe!BKE_object_free(Object * ob) Line 531	C
 	blender.exe!BKE_libblock_free_datablock(ID * id, const int UNUSED_flag) Line 783	C
 	blender.exe!DEG::deg_free_copy_on_write_datablock(ID * id_cow) Line 1081	C++
 	blender.exe!DEG::IDNode::destroy() Line 166	C++
 	blender.exe!DEG::Depsgraph::clear_id_nodes_conditional(const std::function<bool __cdecl(enum ID_Type)> & filter) Line 158	C++
 	blender.exe!DEG::Depsgraph::clear_id_nodes() Line 167	C++
 	blender.exe!DEG::Depsgraph::~Depsgraph() Line 93	C++
 	[External Code]	
 	blender.exe!DEG_graph_free(Depsgraph * graph) Line 334	C++
 	blender.exe!engine_depsgraph_free(RenderEngine * engine) Line 531	C
 	blender.exe!RE_engine_render(Render * re, int do_all) Line 792	C
 	blender.exe!do_render_3d(Render * re) Line 1166	C
 	blender.exe!do_render(Render * re) Line 1245	C
 	blender.exe!do_render_composite(Render * re) Line 1464	C
 	blender.exe!do_render_all_options(Render * re) Line 1729	C
 	blender.exe!RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int frame, const bool write_still) Line 2130	C
 	blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 677	C
 	blender.exe!do_job_thread(void * job_v) Line 384	C
 	blender.exe!tslot_thread_start(void * tslot_p) Line 261	C
 	[External Code]	

I can confirm. One of the drawdata is memory garbage. log: ``` > blender.exe!DRW_drawdata_free(ID * id) Line 1001 C blender.exe!BKE_object_free(Object * ob) Line 531 C blender.exe!BKE_libblock_free_datablock(ID * id, const int UNUSED_flag) Line 783 C blender.exe!DEG::deg_free_copy_on_write_datablock(ID * id_cow) Line 1081 C++ blender.exe!DEG::IDNode::destroy() Line 166 C++ blender.exe!DEG::Depsgraph::clear_id_nodes_conditional(const std::function<bool __cdecl(enum ID_Type)> & filter) Line 158 C++ blender.exe!DEG::Depsgraph::clear_id_nodes() Line 167 C++ blender.exe!DEG::Depsgraph::~Depsgraph() Line 93 C++ [External Code] blender.exe!DEG_graph_free(Depsgraph * graph) Line 334 C++ blender.exe!engine_depsgraph_free(RenderEngine * engine) Line 531 C blender.exe!RE_engine_render(Render * re, int do_all) Line 792 C blender.exe!do_render_3d(Render * re) Line 1166 C blender.exe!do_render(Render * re) Line 1245 C blender.exe!do_render_composite(Render * re) Line 1464 C blender.exe!do_render_all_options(Render * re) Line 1729 C blender.exe!RE_RenderFrame(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int frame, const bool write_still) Line 2130 C blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 677 C blender.exe!do_job_thread(void * job_v) Line 384 C blender.exe!tslot_thread_start(void * tslot_p) Line 261 C [External Code] ```

This issue was referenced by 8efd804685

This issue was referenced by 8efd8046853e3a994237b8efe6567bf35ee7d812

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-02-04 19:02:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72504
No description provided.