Fix T72504 EEVEE: Crash when rendering Instance Collection with hair

This was caused by a double free of the instance data. Remove the need
of the instance data fix the issue.